feat: add logger

--- a/src/main/resources/nacos-dns.properties
+++ b/src/main/resources/nacos-dns.properties
@@ -1,1 +1,1 @@
-nacos.server-addrs=127.0.0.1:8847,127.0.0.1:8848,127.0.0.1:8849
+nacos.dns.server-addrs=127.0.0.1:8847,127.0.0.1:8848,127.0.0.1:8849
