--- a/build.gradle
+++ b/build.gradle
@@ -26,9 +26,15 @@ repositories {
 }
 
 dependencies {
-    compile group: 'com.alibaba.nacos', name: 'nacos-client', version: '1.3.0'
     compile group: 'dnsjava', name: 'dnsjava', version: '3.1.0'
+
+    compile group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.13.3'
+    compile group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.13.3'
+    compile group: 'org.apache.logging.log4j', name: 'log4j-slf4j-impl', version: '2.13.3'
+
     compile group: 'org.slf4j', name: 'slf4j-api', version: '1.7.30'
-    compile group: 'org.jctools', name: 'jctools-core', version: '3.0.0'
+
+    compile group: 'com.alibaba.nacos', name: 'nacos-client', version: '1.3.0'
+
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
