--- a/build.gradle
+++ b/build.gradle
@@ -31,8 +31,9 @@ dependencies {
     compile group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.13.3'
     compile group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.13.3'
     compile group: 'org.apache.logging.log4j', name: 'log4j-slf4j-impl', version: '2.13.3'
-
     compile group: 'org.slf4j', name: 'slf4j-api', version: '1.7.30'
+
+    compile group: 'com.fasterxml.jackson.dataformat', name: 'jackson-dataformat-yaml', version: '2.11.0'
 
     compile group: 'com.alibaba.nacos', name: 'nacos-client', version: '1.3.0'
 
