--- a/build.gradle
+++ b/build.gradle
@@ -37,5 +37,6 @@ dependencies {
 
     compile group: 'com.alibaba.nacos', name: 'nacos-client', version: '1.3.0'
 
+    testCompile group: 'org.mockito', name: 'mockito-core', version: '3.3.3'
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
