--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,15 @@ jar {
     }
 }
 
+task buildRelease(type: Copy) {
+    from('build/libs/') {
+        rename '(.*)-' + version + '(.*)', '$1-server$2'
+    }
+    into 'deployment/target'
+
+    includeEmptyDirs = true
+}
+
 tasks.withType(JavaCompile) {
     options.encoding = 'UTF-8'
 }
@@ -40,3 +49,5 @@ dependencies {
     testCompile group: 'org.mockito', name: 'mockito-core', version: '3.3.3'
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
+
+
