--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,15 @@ jar {
     }
 }
 
+task buildRelease(type: Copy) {
+    from('build/libs/') {
+        rename '(.*)-' + version + '(.*)', '$1-server$2'
+    }
+    into 'deployment/target'
+
+    includeEmptyDirs = true
+}
+
 tasks.withType(JavaCompile) {
     options.encoding = 'UTF-8'
 }
@@ -26,9 +35,19 @@ repositories {
 }
 
 dependencies {
-    compile group: 'com.alibaba.nacos', name: 'nacos-client', version: '1.3.0'
     compile group: 'dnsjava', name: 'dnsjava', version: '3.1.0'
+
+    compile group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.13.3'
+    compile group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.13.3'
+    compile group: 'org.apache.logging.log4j', name: 'log4j-slf4j-impl', version: '2.13.3'
     compile group: 'org.slf4j', name: 'slf4j-api', version: '1.7.30'
-    compile group: 'org.jctools', name: 'jctools-core', version: '3.0.0'
+
+    compile group: 'com.fasterxml.jackson.dataformat', name: 'jackson-dataformat-yaml', version: '2.11.0'
+
+    compile group: 'com.alibaba.nacos', name: 'nacos-client', version: '1.3.0'
+
+    testCompile group: 'org.mockito', name: 'mockito-core', version: '3.3.3'
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
+
+
